# material-design-icons-rs

./: .gitignore  Cargo.toml  LICENSE  Readme.md  flake.nix  go-brr.rb  icon.erb
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2krv07d8lb55xbi265zvqxqj9zyaac4r-source  4b0nbnwd32agrbz31sbbqjcf20254ks1-source  5nfdczcia93d0rf5szxdsb5f7k68fbiy-source  5zqsjhkqz8a96gyzgp1323ya94n9xn75-source  kjh6wk2863ydsqjghkszls702kmsv0ik-source  wkavyf1xaqkpw8f74wig2h18f3mlr862-source
src/: lib.rs  materialiconstwotone.rs
src/materialicons/: action.rs  av.rs  communication.rs  content.rs  editor.rs  file.rs  hardware.rs  home.rs  image.rs  maps.rs  navigation.rs  notification.rs  search.rs
src/materialicons/action/: icon_3d_rotation.rs  icon_accessibility.rs  icon_accessibility_new.rs  icon_accessible.rs  icon_accessible_forward.rs  icon_account_balance.rs  icon_account_balance_wallet.rs  icon_account_box.rs  icon_account_circle.rs  icon_add_card.rs  icon_add_shopping_cart.rs  icon_add_task.rs  icon_add_to_drive.rs  icon_addchart.rs  icon_admin_panel_settings.rs  icon_alarm.rs  icon_alarm_add.rs  icon_alarm_off.rs  icon_alarm_on.rs  icon_all_inbox.rs  icon_all_out.rs  icon_analytics.rs  (+342 more)
src/materialiconsoutlined/: action.rs  device.rs  editor.rs  image.rs  navigation.rs  toggle.rs
src/materialiconsround/: av.rs  home.rs  maps.rs  social.rs
src/materialiconssharp/: alert.rs  content.rs  places.rs
src/materialiconstwotone/: action.rs  device.rs  file.rs  notification.rs
(+7884 files in other folders)
